--- a/src/_core/_tokens.scss
+++ b/src/_core/_tokens.scss
@@ -1,3 +1,6 @@
+/* ACT Design System */
+
+/* Import Design Tokens */
 @import "./colour.scss";
 @import "./spacing.scss";
 @import "./breakpoints.scss";
