--- a/src/_core/colour.scss
+++ b/src/_core/colour.scss
@@ -3,7 +3,9 @@
 /* Reference: /?path=/docs/design-tokens-colours--page */
 
 /* Variables */
+$act-colour__azure: #ecfdff;
 $act-colour__black: #111111;
+$act-colour__blue-crayola: #01cee8;
 $act-colour__green: #098660;
 $act-colour__grey: #777777;
 $act-colour__indigo: #311c6a;
@@ -11,6 +13,8 @@ $act-colour__light-grey: #f6f6f6;
 $act-colour__light-purple: #f4f2fa;
 $act-colour__medium-purple: #9a78f2;
 $act-colour__middle-grey: #adadad;
+$act-colour__misty-rose: #ffe9eb;
+$act-colour__old-lace: #fff6e9;
 $act-colour__purple: #472d8c;
 $act-colour__plum-purple: #6042ae;
 $act-colour__red: #ba2133;
