--- a/src/_core/_typography.scss
+++ b/src/_core/_typography.scss
@@ -9,187 +9,185 @@
 	font-family: $sourcesanspro;
 }
 
-	/* H1 */
-	h1,
-	.act-h1 {
-		color: $act-colour__black;
-		font-size: $act-font-size__desktop-h1;
-		font-weight: $act-font-weight__bold;
-		line-height: $act-line-height__120;
+/* H1 */
+h1,
+.act-h1 {
+	color: $act-colour__black;
+	font-size: $act-font-size__desktop-h1;
+	font-weight: $act-font-weight__bold;
+	line-height: $act-line-height__120;
+	&.large,
+	&-large {
+		font-size: $act-font-size__desktop-h1-large;
+		font-weight: $act-font-weight__semibold;
+		line-height: $act-line-height__100;
+	}
+	@include devices(mobile) {
+		font-size: $act-font-size__mobile-h1;
 		&.large,
 		&-large {
-			font-size: $act-font-size__desktop-h1-large;
-			font-weight: $act-font-weight__semibold;
-			line-height: $act-line-height__100;
-		}
-		@include devices(mobile) {
-			font-size: $act-font-size__mobile-h1;
-			&.large,
-			&-large {
-				font-size: $act-font-size__mobile-h1-large;
-			}
+			font-size: $act-font-size__mobile-h1-large;
 		}
 	}
+}
 
-	/* H2 */
-	h2,
-	.act-h2 {
-		color: $act-colour__black;
-		font-size: $act-font-size__desktop-h2;
-		font-weight: $act-font-weight__semibold;
-		line-height: $act-line-height__120;
-		margin-bottom: map-get($act-space, "desktop-2");
-		margin-top: map-get($act-space, "desktop-5");
-		@include devices(mobile) {
-			font-size: $act-font-size__mobile-h2;
-		}
+/* H2 */
+h2,
+.act-h2 {
+	color: $act-colour__black;
+	font-size: $act-font-size__desktop-h2;
+	font-weight: $act-font-weight__semibold;
+	line-height: $act-line-height__120;
+	margin-bottom: map-get($act-space, "desktop-2");
+	margin-top: map-get($act-space, "desktop-5");
+	@include devices(mobile) {
+		font-size: $act-font-size__mobile-h2;
 	}
+}
 
-	/* H3 */
-	h3,
-	.act-h3 {
-		color: $act-colour__black;
-		font-size: $act-font-size__desktop-h3;
-		font-weight: $act-font-weight__semibold;
-		line-height: $act-line-height__120;
-		margin-bottom: map-get($act-space, "desktop-1");
-		@include devices(mobile) {
-			font-size: $act-font-size__mobile-h3;
-		}
+/* H3 */
+h3,
+.act-h3 {
+	color: $act-colour__black;
+	font-size: $act-font-size__desktop-h3;
+	font-weight: $act-font-weight__semibold;
+	line-height: $act-line-height__120;
+	margin-bottom: map-get($act-space, "desktop-1");
+	@include devices(mobile) {
+		font-size: $act-font-size__mobile-h3;
 	}
+}
 
-	/* H4 */
-	h4,
-	.act-h4 {
-		font-size: $act-font-size__desktop-h4;
-		font-weight: $act-font-weight__semibold;
-		line-height: $act-line-height__130;
-		margin-bottom: map-get($act-space, "desktop-1");
-		@include devices(mobile) {
-			font-size: $act-font-size__mobile-h4;
-		}
-		&.white,
-		&-white {
-			color: $act-colour__white;
-		}
+/* H4 */
+h4,
+.act-h4 {
+	font-size: $act-font-size__desktop-h4;
+	font-weight: $act-font-weight__semibold;
+	line-height: $act-line-height__130;
+	margin-bottom: map-get($act-space, "desktop-1");
+	@include devices(mobile) {
+		font-size: $act-font-size__mobile-h4;
 	}
-
-	/* H5 */
-	h5,
-	.act-h5 {
-		font-size: $act-font-size__desktop-h5;
-		font-weight: $act-font-weight__semibold;
-		line-height: $act-line-height__130;
-		@include devices(mobile) {
-			font-size: $act-font-size__mobile-h5;
-		}
-		&:last-child {
-			margin-bottom: 0px;
-		}
+	&.white,
+	&-white {
+		color: $act-colour__white;
 	}
+}
 
-	/* H6 */
-	h6,
-	.act-h6 {
-		color: $act-colour__black;
-		font-size: $act-font-size__desktop-h6;
-		font-weight: $act-font-weight__semibold;
-		line-height: $act-line-height__130;
-		margin-bottom: map-get($act-space, "desktop-1");
-		@include devices(mobile) {
-			font-size: $act-font-size__mobile-h6;
-		}
-		&:last-child {
-			margin-bottom: 0px;
-		}
+/* H5 */
+h5,
+.act-h5 {
+	font-size: $act-font-size__desktop-h5;
+	font-weight: $act-font-weight__semibold;
+	line-height: $act-line-height__130;
+	@include devices(mobile) {
+		font-size: $act-font-size__mobile-h5;
 	}
+	&:last-child {
+		margin-bottom: 0px;
+	}
+}
 
-	/* P */
-	p,
-	.act-p {
-		color: $act-colour__black;
+/* H6 */
+h6,
+.act-h6 {
+	color: $act-colour__black;
+	font-size: $act-font-size__desktop-h6;
+	font-weight: $act-font-weight__semibold;
+	line-height: $act-line-height__130;
+	margin-bottom: map-get($act-space, "desktop-1");
+	@include devices(mobile) {
+		font-size: $act-font-size__mobile-h6;
+	}
+	&:last-child {
+		margin-bottom: 0px;
+	}
+}
+
+/* P */
+p,
+.act-p {
+	color: $act-colour__black;
+	font-family: $sourcesanspro;
+	font-size: $act-font-size__desktop-p;
+	font-weight: $act-font-weight__regular;
+	line-height: $act-line-height__150;
+	margin-bottom: map-get($act-space, "desktop-1");
+	&.bold,
+	&-bold {
 		font-family: $sourcesanspro;
-		font-size: $act-font-size__desktop-p;
-		font-weight: $act-font-weight__regular;
-		line-height: $act-line-height__150;
-		margin-bottom: map-get($act-space, "desktop-1");
-		&.bold,
-		&-bold {
-			font-family: $sourcesanspro;
-			font-weight: $act-font-weight__semibold;
-		}
-		&.white,
-		&-white {
-			font-family: $sourcesanspro;
-			color: $act-colour__white;
-		}
+		font-weight: $act-font-weight__semibold;
+	}
+	&.white,
+	&-white {
+		font-family: $sourcesanspro;
+		color: $act-colour__white;
+	}
+	&.large,
+	&-large {
+		font-family: $sourcesanspro;
+		font-size: $act-font-size__desktop-p-large;
+	}
+	&.small,
+	&-small {
+		font-family: $sourcesanspro;
+		font-size: $act-font-size__desktop-p-small;
+	}
+	&.xsmall,
+	&-xsmall {
+		font-family: $sourcesanspro;
+		font-size: $act-font-size__desktop-p-xsmall;
+	}
+	@include devices(mobile) {
+		font-size: $act-font-size__mobile-p;
 		&.large,
 		&-large {
-			font-family: $sourcesanspro;
-			font-size: $act-font-size__desktop-p-large;
+			font-size: $act-font-size__mobile-p-large;
 		}
 		&.small,
 		&-small {
-			font-family: $sourcesanspro;
 			font-size: $act-font-size__desktop-p-small;
 		}
 		&.xsmall,
 		&-xsmall {
-			font-family: $sourcesanspro;
 			font-size: $act-font-size__desktop-p-xsmall;
 		}
-		@include devices(mobile) {
-			font-size: $act-font-size__mobile-p;
-			&.large,
-			&-large {
-				font-size: $act-font-size__mobile-p-large;
-			}
-			&.small,
-			&-small {
-				font-size: $act-font-size__desktop-p-small;
-			}
-			&.xsmall,
-			&-xsmall {
-				font-size: $act-font-size__desktop-p-xsmall;
-			}
-		}
-		&:last-child {
-			margin-bottom: 0px;
-		}
 	}
-
-	/* Lists */
-	ol,
-	ul {
-		font-family: $sourcesanspro;
-		font-size: $act-font-size__desktop-p;
-		font-weight: $act-font-weight__regular;
-		line-height: $act-line-height__150;
-		margin: map-get($act-space, "desktop-1") 0px;
-		li {
-			list-style-position: inside;
-		}
+	&:last-child {
+		margin-bottom: 0px;
 	}
+}
 
-	/* A */
-	a,
-	.act-a{
-		border-bottom: 1px solid $act-colour__black;
-		color: inherit;
-		cursor: pointer;
-		font-family: $sourcesanspro;
-		font-size: inherit;
-		// font-weight: inherit;
-		line-height: inherit;
-		text-decoration: none;
-		.fa-arrow-up-right-from-square {
-			font-size: 80%;
-			margin-left: map-get($act-space, "desktop-0");
-		}
-		&:hover {
-			border-bottom: 1px dashed $act-colour__purple;
-			color: $act-colour__purple;
-		}
+/* Lists */
+ol,
+ul {
+	font-family: $sourcesanspro;
+	font-size: $act-font-size__desktop-p;
+	font-weight: $act-font-weight__regular;
+	line-height: $act-line-height__150;
+	margin: map-get($act-space, "desktop-1") 0px;
+	li {
+		list-style-position: inside;
 	}
+}
 
-
+/* A */
+a,
+.act-a {
+	border-bottom: 1px solid $act-colour__purple;
+	color: $act-colour__purple;
+	cursor: pointer;
+	font-family: $sourcesanspro;
+	font-size: inherit;
+	font-weight: $act-font-weight__semibold;
+	line-height: inherit;
+	text-decoration: none;
+	.fa-arrow-up-right-from-square {
+		font-size: 80%;
+		margin-left: map-get($act-space, "desktop-0");
+	}
+	&:hover {
+		border-bottom: 1px dashed $act-colour__plum-purple;
+		color: $act-colour__plum-purple;
+	}
+}
