--- a/src/4-components/t1-tables/t1-style.scss
+++ b/src/4-components/t1-tables/t1-style.scss
@@ -13,56 +13,91 @@
 table,
 .act-table {
 	border-collapse: collapse;
-	thead {
+	width: 100%;
+	thead,
+	tfoot {
 		tr {
 			td,
 			th {
 				background-color: $act-colour__grey;
 				border: 1px solid $act-colour__grey;
 				border-left: 1px solid $act-colour__grey;
+				border-radius: 0px !important;
 				border-right: 1px solid $act-colour__grey;
-				color: $act-colour__white;
-				font-size: $act-font-size__desktop-p-small;
+				color: $act-colour__white !important;
+				font-size: $act-font-size__desktop-p;
+				line-height: $act-line-height__150;
 				padding: map-get($act-space, "desktop-2");
 				text-align: left;
 			}
 		}
 	}
+	&__secondary {
+		thead,
+		tfoot {
+			tr {
+				td,
+				th {
+					background-color: $act-colour__white;
+					border: 1px solid $act-colour__grey;
+					border-left: 0px solid $act-colour__white;
+					border-radius: 0px !important;
+					border-right: 0px solid $act-colour__white;
+					border-top: 0px solid $act-colour__white;
+					color: $act-colour__black !important;
+				}
+			}
+		}
+	}
 	tbody {
+		border-radius: 0px !important;
+		box-shadow: none !important;
 		tr {
 			td {
 				border-bottom: 1px solid $act-colour__middle-grey;
 				border-left: 1px solid transparent;
+				border-radius: 0px !important;
 				border-right: 1px solid transparent;
-				font-size: $act-font-size__desktop-p-small;
+				font-size: $act-font-size__desktop-p;
 				font-weight: $act-font-weight__regular;
+				line-height: $act-line-height__150;
 				padding: map-get($act-space, "desktop-2");
 				vertical-align: middle;
 			}
-		}
-	}
-}
-
-#docs-root {
-	table,
-	.act-table {
-		thead,
-		tbody {
-			tr {
-				td,
-				th {
-					.act-icon {
-						border-radius: 2px;
-						display: inline-flex;
-						height: 9px;
-						width: map-get($act-space, "desktop-4");
-						margin-right: map-get($act-space, "desktop-1");
-					}
-					p {
-						display: inline;
-					}
+			&:last-child {
+				td {
+					border-bottom: 1px solid $act-colour__middle-grey !important;
+				}
+			}
+			&:nth-child(odd) {
+				td {
+					background-color: $act-colour__light-grey;
 				}
 			}
 		}
 	}
 }
+
+// #docs-root {
+// 	table,
+// 	.act-table {
+// 		thead,
+// 		tbody {
+// 			tr {
+// 				td,
+// 				th {
+// 					.act-icon {
+// 						border-radius: 2px;
+// 						display: inline-flex;
+// 						height: 9px;
+// 						width: map-get($act-space, "desktop-4");
+// 						margin-right: map-get($act-space, "desktop-1");
+// 					}
+// 					p {
+// 						display: inline;
+// 					}
+// 				}
+// 			}
+// 		}
+// 	}
+// }
