--- a/src/_core/colour.scss
+++ b/src/_core/colour.scss
@@ -21,6 +21,7 @@ $act-colour__red: #ba2133;
 $act-colour__violet: #1e0f48;
 $act-colour__white: #ffffff;
 $act-colour__yellow: #f2c94c;
+$act-colour__yellow-orange: #ff9500;
 
 $act-colour__region-belconnen: #377e7a;
 $act-colour__region-gungahlin: #90a630;
