--- a/src/_core/_typography.scss
+++ b/src/_core/_typography.scss
@@ -182,6 +182,7 @@ a,
 	font-weight: $act-font-weight__semibold;
 	line-height: inherit;
 	text-decoration: none;
+	.fa-up-right-from-square,
 	.fa-arrow-up-right-from-square {
 		font-size: 80%;
 		margin-left: map-get($act-space, "desktop-0");
