--- a/.storybook/public/style/preview.scss
+++ b/.storybook/public/style/preview.scss
@@ -33,6 +33,10 @@
 		.css-1vg6q84 {
 			display: none;
 		}
+		.css-cflg6q {
+			border-bottom: 0px transparent;
+			text-decoration: none !important;
+		}
 		&-preview {
 			border: 1px solid $act-colour__middle-grey;
 			border-radius: 0px;
