--- a/src/4-components/L2-Logos/l2-style.scss
+++ b/src/4-components/L2-Logos/l2-style.scss
@@ -63,6 +63,7 @@ $act-local-cobrand-text-height-desktop: calc(($act-local-logo-height-desktop/100
 					align-items: center;
 					border: inherit;
 					border-left: $act-local-logo-border;
+					color: $act-colour__black;
 					display: flex;
 					font-size: $act-font-size__desktop-p-large;
 					margin-left: $act-local-logo-space;
