--- a/src/4-components/c1-cards/c1-style.scss
+++ b/src/4-components/c1-cards/c1-style.scss
@@ -2,6 +2,7 @@
 	display: grid;
 	column-gap: map-get($act-space, "desktop-3");
 	row-gap: map-get($act-space, "desktop-3");
+	margin: map-get($act-space, "desktop-3") 0px;
 	@include devices(mobile) {
 		grid-template-columns: repeat(1, minmax(0, 1fr));
 	}
