--- a/src/_core/colour.scss
+++ b/src/_core/colour.scss
@@ -9,7 +9,7 @@ $act-colour__blue-crayola: #01cee8;
 $act-colour__green: #098660;
 $act-colour__grey: #777777;
 $act-colour__indigo: #311c6a;
-$act-colour__light-green: #E7FFF8;
+$act-colour__light-green: #e7fff8;
 $act-colour__light-grey: #f6f6f6;
 $act-colour__light-purple: #f4f2fa;
 $act-colour__medium-purple: #9a78f2;
