--- a/src/4-components/f2-form-elements/f2-style.scss
+++ b/src/4-components/f2-form-elements/f2-style.scss
@@ -54,6 +54,15 @@ form p,
 		flex-direction: row-reverse;
 		justify-content: flex-end;
 	}
+	&__toggle {
+		display: flex;
+		height: map-get($act-space, "desktop-4");
+		padding: 0px;
+		position: relative;
+		label {
+			display: none;
+		}
+	}
 	&__cw-2 {
 		/* 2 Column */ /* 16.666% */ /* 50/33/16 */
 		@include devices(mobile) {
@@ -176,11 +185,11 @@ form p,
 		}
 	}
 	&__input,
+	&__text,
 	&__email,
 	&__password,
 	&__date,
 	&__tel,
-	&__text,
 	&__url,
 	&__textarea {
 		box-sizing: border-box;
@@ -272,6 +281,55 @@ form p,
 		&__focus {
 			box-shadow: 0 0 0 1px $act-colour__white, 0 0 0 4px $act-colour__purple;
 			border-radius: 0px;
+		}
+	}
+	&__toggle {
+		cursor: pointer;
+		height: map-get($act-space, "desktop-4");
+		width: calc(map-get($act-space, "desktop-6"));
+		opacity: 0;
+		z-index: 2;
+		&__slider {
+			background: $act-colour__white;
+			border: 2px solid $act-colour__purple;
+			border-radius: calc(map-get($act-space, "desktop-4") / 2);
+			bottom: 0;
+			display: flex;
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			-webkit-transition: 0.4s;
+			transition: 0.4s;
+			width: calc(map-get($act-space, "desktop-6"));
+			z-index: 1;
+			&::before {
+				position: absolute;
+				border-radius: 50%;
+				content: "";
+				height: calc(map-get($act-space, "desktop-4") - 12px);
+				width: calc(map-get($act-space, "desktop-4") - 12px);
+				left: 4px;
+				bottom: 4px;
+				background-color: $act-colour__purple;
+				-webkit-transition: 0.4s;
+				transition: 0.4s;
+			}
+		}
+		:checked + &__slider {
+			background-color: $act-colour__purple;
+		}
+		&.focus,
+		&:focus,
+		&__focus,
+		:focus + &__slider {
+			box-shadow: 0 0 0 1px $act-colour__white, 0 0 0 4px $act-colour__purple;
+		}
+		:checked + &__slider:before {
+			background-color: $act-colour__white;
+			-webkit-transform: translateX(32px);
+			-ms-transform: translateX(32px);
+			transform: translateX(32px);
 		}
 	}
 	&__description {
