--- a/src/4-components/f2-form-elements/f2-style.scss
+++ b/src/4-components/f2-form-elements/f2-style.scss
@@ -256,6 +256,9 @@ form p,
 			}
 		}
 	}
+	&__textarea {
+		height: unset;
+	}
 	&__checkbox {
 		accent-color: $act-colour__purple;
 		color: $act-colour__purple;
