--- a/src/4-components/c2-content/c2-style.scss
+++ b/src/4-components/c2-content/c2-style.scss
@@ -55,3 +55,28 @@
 		margin-top: map-get($act-space, "desktop-0");
 	}
 }
+
+.act-service-card {
+	background-color: $act-colour__light-grey;
+	box-shadow: inset 4px 0 0 0 $act-colour__purple, inset 0 0 0 0px $act-colour__purple, inset 0 0 0 0 $act-colour__purple, inset 0 0 0 0 $act-colour__purple;
+	display: flex;
+	flex-direction: column;
+	margin: map-get($act-space, "desktop-4") 0px;
+	padding: map-get($act-space, "desktop-3");
+	width: fit-content;
+	&__title {
+		color: $act-colour__black;
+		font-size: $act-font-size__desktop-h4;
+		font-weight: $act-font-weight__semibold;
+		margin-bottom: map-get($act-space, "desktop-1");
+	}
+	&__body {
+		color: $act-colour__black;
+		font-size: $act-font-size__desktop-h6;
+		font-weight: $act-font-weight__regular;
+		line-height: $act-line-height__150;
+	}
+	&__cta {
+		margin-top: map-get($act-space, "desktop-1");
+	}
+}
