--- a/src/_core/_core.scss
+++ b/src/_core/_core.scss
@@ -19,6 +19,7 @@
 @import "./src/4-components/l1-loaders/l1-style.scss";
 @import "./src/4-components/l2-logos/l2-style.scss";
 @import "./src/4-components/p1-popups/p1-style.scss";
+@import "./src/4-components/s1-search-elements/s1-style.scss";
 @import "./src/4-components/t1-tables/t1-style.scss";
 @import "./src/4-components/t2-tabs/t2-style.scss";
 @import "./src/4-components/t3-tags/t3-style.scss";
@@ -30,3 +31,5 @@
 @import "./src/4-components/w1-wayfinding/w14-pagination/w14-style.scss";
 @import "./src/4-components/w1-wayfinding/w15-mega-menu/w15-style.scss";
 @import "./src/4-components/w1-wayfinding/w16-breadcrumbs/w16-style.scss";
+@import "./src/4-components/w1-wayfinding/w16-breadcrumbs/w16-style.scss";
+@import "./src/4-components/w1-wayfinding/w17-index/w17-style.scss";
