--- a/src/_core/spacing.scss
+++ b/src/_core/spacing.scss
@@ -15,6 +15,7 @@ $act-space__desktop-6: 64px;
 $act-space__desktop-7: 80px;
 $act-space__desktop-8: 124px;
 $act-space__desktop-9: 168px;
+$act-space__desktop-10: 210px;
 
 $act-space: (
 	"desktop-0": $act-space__desktop-0,
@@ -27,4 +28,5 @@ $act-space: (
 	"desktop-7": $act-space__desktop-7,
 	"desktop-8": $act-space__desktop-8,
 	"desktop-9": $act-space__desktop-9,
+	"desktop-10": $act-space__desktop-10,
 );
