--- a/src/_core/_core.scss
+++ b/src/_core/_core.scss
@@ -16,6 +16,7 @@
 @import "./src/4-components/b1-buttons/b1-style.scss";
 @import "./src/4-components/f1-footers/f1-style.scss";
 @import "./src/4-components/f2-form-elements/f2-style.scss";
+@import "./src/4-components/h1-hero-rows/h1-style.scss";
 @import "./src/4-components/l1-loaders/l1-style.scss";
 @import "./src/4-components/l2-logos/l2-style.scss";
 @import "./src/4-components/p1-popups/p1-style.scss";
