--- a/src/_core/_typography.scss
+++ b/src/_core/_typography.scss
@@ -12,7 +12,7 @@
 /* H1 */
 h1,
 .act-h1 {
-	color: $act-colour__black;
+	// color: $act-colour__black;
 	font-size: $act-font-size__desktop-h1;
 	font-weight: $act-font-weight__bold;
 	line-height: $act-line-height__120;
@@ -21,6 +21,9 @@ h1,
 		font-size: $act-font-size__desktop-h1-large;
 		font-weight: $act-font-weight__semibold;
 		line-height: $act-line-height__100;
+	}
+	&:last-child {
+		margin-bottom: 0px;
 	}
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-h1;
@@ -40,6 +43,9 @@ h2,
 	line-height: $act-line-height__120;
 	margin-bottom: map-get($act-space, "desktop-2");
 	margin-top: map-get($act-space, "desktop-5");
+	&:last-child {
+		margin-bottom: 0px;
+	}
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-h2;
 	}
@@ -48,11 +54,14 @@ h2,
 /* H3 */
 h3,
 .act-h3 {
-	color: $act-colour__black;
+	// color: $act-colour__black;
 	font-size: $act-font-size__desktop-h3;
 	font-weight: $act-font-weight__semibold;
 	line-height: $act-line-height__120;
 	margin-bottom: map-get($act-space, "desktop-1");
+	&:last-child {
+		margin-bottom: 0px;
+	}
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-h3;
 	}
@@ -65,6 +74,9 @@ h4,
 	font-weight: $act-font-weight__semibold;
 	line-height: $act-line-height__130;
 	margin-bottom: map-get($act-space, "desktop-1");
+	&:last-child {
+		margin-bottom: 0px;
+	}
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-h4;
 	}
@@ -80,11 +92,11 @@ h5,
 	font-size: $act-font-size__desktop-h5;
 	font-weight: $act-font-weight__semibold;
 	line-height: $act-line-height__130;
-	@include devices(mobile) {
-		font-size: $act-font-size__mobile-h5;
-	}
 	&:last-child {
 		margin-bottom: 0px;
+	}
+	@include devices(mobile) {
+		font-size: $act-font-size__mobile-h5;
 	}
 }
 
@@ -96,11 +108,11 @@ h6,
 	font-weight: $act-font-weight__semibold;
 	line-height: $act-line-height__130;
 	margin-bottom: map-get($act-space, "desktop-1");
-	@include devices(mobile) {
-		font-size: $act-font-size__mobile-h6;
-	}
 	&:last-child {
 		margin-bottom: 0px;
+	}
+	@include devices(mobile) {
+		font-size: $act-font-size__mobile-h6;
 	}
 }
 
@@ -113,6 +125,9 @@ p,
 	font-weight: $act-font-weight__regular;
 	line-height: $act-line-height__150;
 	margin-bottom: map-get($act-space, "desktop-1");
+	&:last-child {
+		margin-bottom: 0px;
+	}
 	&.bold,
 	&-bold {
 		font-family: $sourcesanspro;
@@ -152,9 +167,6 @@ p,
 		&-xsmall {
 			font-size: $act-font-size__desktop-p-xsmall;
 		}
-	}
-	&:last-child {
-		margin-bottom: 0px;
 	}
 }
 
