--- a/src/4-components/h1-hero-rows/h1-style.scss
+++ b/src/4-components/h1-hero-rows/h1-style.scss
@@ -308,8 +308,8 @@ $act-hero-widget-height: 300px;
 					width: 100%;
 				}
 				@include devices(tablet) {
-					max-width: 50%;
-					width: 50%;
+					max-width: 100%;
+					width: 100%;
 				}
 				@include devices(desktop) {
 					max-width: 50%;
@@ -355,13 +355,14 @@ $act-hero-widget-height: 300px;
 			background-color: $act-colour__purple;
 			color: $act-colour__white;
 			display: flex;
+			flex-wrap: wrap;
 			justify-content: center;
 			padding: map-get($act-space, "desktop-3");
 			position: absolute;
 			top: $act-space__desktop-10;
 			width: 100%;
 			&__demo {
-				height: $act-space__desktop-8;
+				min-height: $act-space__desktop-8;
 			}
 			&__block {
 				display: flex;
