--- a/src/4-components/c2-content/c2-style.scss
+++ b/src/4-components/c2-content/c2-style.scss
@@ -22,6 +22,7 @@
 	flex-direction: row;
 	justify-content: flex-start;
 	padding: map-get($act-space, "desktop-3");
+	margin-bottom: map-get($act-space, "desktop-3");
 	width: 100%;
 	&__content {
 		color: $act-colour__black;
