added cookie consent component

--- a/src/4-components/p1-popups/p1-style.scss
+++ b/src/4-components/p1-popups/p1-style.scss
@@ -10,10 +10,21 @@
 	top: 0px;
 	width: 100vw;
 	z-index: 99999;
+	&.bottom {
+		justify-content: end;
+		bottom: 0px;
+		top: 0px;
+		height: auto;
+	}
 	&__container {
 		max-width: calc($act-page-max-width/2);
 		padding: map-get($act-space, "desktop-2");
 		width: 100%;
+		&.act-cookie-consent {
+			max-width: 100%;
+			padding: 0;
+			width: 100%;
+		}
 	}
 	&__content {
 		background-color: $act-colour__white;
