--- a/src/4-components/t4-tooltips/t4-style.scss
+++ b/src/4-components/t4-tooltips/t4-style.scss
@@ -58,21 +58,13 @@
 	}
 	&__content {
 		background: $act-colour__light-grey;
-		clip-path: polygon(
-			0% 0%,
-			100% 0%,
-			100% calc(100% - 10px),
-			calc(50% + 10px) calc(100% - 10px),
-			50% 100%,
-			calc(50% - 10px) calc(100% - 10px),
-			0% calc(100% - 10px)
-		);
+		clip-path: polygon(0% 0%, 100% 0%, 100% calc(100% - 10px), calc(50% + 10px) calc(100% - 10px), 50% 100%, calc(50% - 10px) calc(100% - 10px), 0% calc(100% - 10px));
 		display: flex;
 		gap: 1rem;
 		font-size: $act-font-size__desktop-p-small;
 		font-weight: $act-font-weight__semibold;
 		left: 50%;
-		transform:translate(-50%, 0);
+		transform: translate(-50%, 0);
 		padding-top: map-get($act-space, "desktop-2");
 		padding-bottom: map-get($act-space, "desktop-3");
 		padding-left: map-get($act-space, "desktop-2");
