--- a/src/4-components/w1-wayfinding/w15-mega-menu/w15-style.scss
+++ b/src/4-components/w1-wayfinding/w15-mega-menu/w15-style.scss
@@ -20,25 +20,44 @@
 	background-color: $act-colour__violet;
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	height: auto;
 	left: 0px;
 	position: fixed;
 	top: 0px;
 	width: 100vw;
 	z-index: 9999;
+	//bottom shadow
+	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06); 
+
 	&__container {
 		color: $act-colour__white;
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
 		justify-content: space-between;
 		height: 100%;
-		max-width: $act-page-max-width;
-		padding: map-get($act-space, "desktop-2");
 		width: 100%;
+	}
+	.invisible {
+		visibility: hidden;
+	}
+	.hidden-mobile {
+		// visibility: hidden;
+		background-color: $act-colour__violet;
+		@include devices(mobile) {
+			display: none;
+		}
+	}
+	.hidden {
+		display: none;
 	}
 	&__content {
 		display: flex;
-		padding: map-get($act-space, "desktop-2");
+		&__block {
+			padding: map-get($act-space, "desktop-5") map-get($act-space, "desktop-2");
+			@include devices(mobile) {
+				width: 100%;
+			}
+		}
 		&__header {
 			align-items: center;
 			flex-direction: row;
@@ -49,11 +68,56 @@
 			flex-direction: row;
 			flex-grow: 1;
 			justify-content: flex-start;
-			padding: map-get($act-space, "desktop-6") map-get($act-space, "desktop-2");
 		}
-		&__block {
-			width: 30%;
-			margin-right: map-get($act-space, "desktop-6");
+		//parent links
+		&__block-main-menu {
+			margin: 0 map-get($act-space, "desktop-1");
+			padding: map-get($act-space, "desktop-5") map-get($act-space, "desktop-2");
+			padding-left: map-get($act-space, "desktop-8");
+			padding-right: map-get($act-space, "desktop-1");
+			width: 33%;
+			@include devices(mobile) {
+				padding-left: map-get($act-space, "desktop-1");
+				width: 100%;
+			}
+		}
+		
+		//child links
+		&__block-sub-menu {
+			a {
+				color: $act-colour__black;
+			}
+			background-color: $act-colour__light-grey;
+			
+			padding: map-get($act-space, "desktop-5") map-get($act-space, "desktop-2");
+			padding-left: map-get($act-space, "desktop-2");
+			padding-right: map-get($act-space, "desktop-8");
+			width: 100%;
+			@include devices(mobile) {
+				padding-left: map-get($act-space, "desktop-1");
+				padding-right: map-get($act-space, "desktop-1");
+				width: 100%;
+			}
+			.back-button {
+				all: unset;
+				cursor: pointer;
+				display: none;
+				margin-left: map-get($act-space, "desktop-2");
+				margin-bottom: map-get($act-space, "desktop-1");
+				@include devices(mobile) {
+					display: flex;
+				}
+				color: $act-colour__black;
+				&__text {
+					font-size: $act-font-size__desktop-p-small;
+					line-height: $act-line-height__130;
+				}
+				&__icon {
+					font-size: $act-font-size__desktop-p-small;
+					line-height: $act-line-height__130;
+				}
+
+			}
 		}
 		&__footer {
 			align-items: center;
@@ -61,44 +125,76 @@
 			justify-content: space-between;
 		}
 	}
+	&__section-heading {
+		font-size: $act-font-size__desktop-h4;
+		font-weight: $act-font-weight__bold;
+		line-height: $act-line-height__130;
+		padding: map-get($act-space, "desktop-1");
+	}
+	&__link-container {
+		display: flex;
+		flex-direction: column;
+		gap: map-get($act-space, "desktop-1");
+		height: auto;
+	}
 	&__link {
 		align-items: center;
 		color: $act-colour__white;
 		cursor: pointer;
 		display: flex;
 		justify-content: space-between;
-		padding: map-get($act-space, "desktop-2");
+		padding: map-get($act-space, "desktop-1");
 		width: 100%;
 		&__text {
-			font-size: $act-font-size__desktop-h4;
+			font-size: $act-font-size__desktop-p-small;
 			font-weight: $act-font-weight__semibold;
 			line-height: $act-line-height__130;
 		}
 		&__icon {
-			font-size: $act-font-size__desktop-h4;
+			font-size: $act-font-size__desktop-p-small;
 			font-weight: $act-font-weight__semibold;
 			line-height: $act-line-height__130;
 		}
+		&:hover {
+			background-color: white;
+		}
+		&:hover &__icon{
+			color: $act-colour__black;
+		}
 		&:hover &__text {
-			text-decoration: underline;
+			text-decoration: none;
+			color: $act-colour__black;
 		}
 	}
-	&__sublink {
-		align-items: center;
-		color: $act-colour__white;
-		cursor: pointer;
-		display: flex;
-		justify-content: space-between;
-		padding: map-get($act-space, "desktop-2");
-		width: 100%;
-		&__text {
-			font-size: $act-font-size__desktop-h6;
-			font-weight: $act-font-weight__regular;
+	&__sub-menu-link-container {
+		height: auto;
+		.section-heading {
+			color: $act-colour__purple;
+			font-size: $act-font-size__desktop-h4;
+			font-weight: $act-font-weight__bold;
 			line-height: $act-line-height__130;
+			padding: map-get($act-space, "desktop-1");
+			margin-left: map-get($act-space, "desktop-1");
 		}
-		&:hover &__text {
-			text-decoration: underline;
+		.sub-menu-links-list {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			@include devices(mobile) {
+				grid-template-columns: 1fr;
+			}
+			height: auto;
+			justify-content: space-between;
+			.act-megamenu__link {
+				color: $act-colour__black;
+				border-bottom: 1px solid white;
+				align-items: center;
+				padding: map-get($act-space, "desktop-2");
+				&__icon {
+					color: $act-colour__purple;
+				}
+			}
 		}
+		
 	}
 	&__close {
 		align-items: center;
@@ -119,46 +215,6 @@
 		&:hover {
 			border-bottom: 2px solid white;
 			border-top: 2px solid transparent;
-		}
-	}
-	&__socials {
-		align-items: center;
-		color: $act-colour__white;
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-end;
-		&__icon {
-			align-items: center;
-			background-color: $act-colour__white;
-			border: none;
-			color: $act-colour__violet;
-			display: inline-flex;
-			height: map-get($act-space, "desktop-4");
-			justify-content: center;
-			margin: 0px map-get($act-space, "desktop-0");
-			max-height: map-get($act-space, "desktop-4");
-			min-height: map-get($act-space, "desktop-4");
-			max-width: map-get($act-space, "desktop-4");
-			min-width: map-get($act-space, "desktop-4");
-			text-decoration: none;
-			width: map-get($act-space, "desktop-4");
-			&:first-of-type {
-				margin-left: map-get($act-space, "desktop-2");
-			}
-			&:last-of-type {
-				margin-right: 0px;
-			}
-			i {
-				display: flex;
-				font-size: map-get($act-space, "desktop-2");
-				height: map-get($act-space, "desktop-2");
-				width: map-get($act-space, "desktop-2");
-			}
-			&:hover {
-				background-color: $act-colour__medium-purple;
-				border: none;
-				color: $act-colour__white;
-			}
 		}
 	}
 }
